[package]
name = "_my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"

# for async-002
futures = "0.3"
crossbeam = "0.8"

# for streams
# Once the Stream trait is stabilized in the Rust standard library,
# Tokio's stream utilities will be moved into the tokio crate.
tokio-stream = "0.1"
async-stream = "0.3.5"
