[package]
name = "_my_rayon"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "my_fibos"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[dependencies]
rand ={ version = "0.8.5", features = ["small_rng"]}
rand_chacha = "0.3.1"
